# hilda

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  hilda.cabal
src/: Args.hs  Bar.hs  CLI.hs  Dispatch.hs  Foo.hs  Main.hs  SequenceMatcher.hs
src/App/Data/: Template.hs
src/App/IO/: Artifact.hs  DB.hs  Provider.hs
src/App/Template/: Types.hs
src/App/Template/Parse/: Demo.hs  Lexer.hs  Lifter.hs  Parser.hs  demo.template
src/App/Utils/: Artifact.hs
src/Conf/: CLI.hs  Constants.hs  Dispatch.hs  Paths.hs
src/Handler/: Deploy.hs  Template.hs  Utils.hs
src/Handlers/: Foo.hs  Scratch.hs  Template.hs  Utils.hs
src/Lib/CommandLine/: Args.hs  Cmd.hs
src/Lib/DB/: CSV.hs
src/Lib/IO/: File.hs
src/Lib/Utils/: File.hs  Result.hs  String.hs
src/Provider/Docker/Local/: Common.hs  Container.hs  Network.hs
