cabal-version:       2.4
name:                hilda
version:             0.0.1
synopsis:            The hilda command line tool.
homepage:            https://github.com/jtpaasch/hilda
license:             MIT
license-file:        LICENSE
author:              JT Paasch
maintainer:          jt.paasch@gmail.com
extra-source-files:  CHANGELOG.md, README.md, Makefile, .gitignore

executable hilda
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
  other-modules:       Conf.Constants, Conf.CLI, Conf.Dispatch,
                       Lib.Utils.Result, Lib.Utils.File,
                       Lib.CommandLine.Args, Lib.CommandLine.Cmd,
                       Handlers.Utils, Handlers.Foo, Handlers.Scratch 
  hs-source-dirs:      src
  default-language:    Haskell2010

