cabal-version:       2.4
name:                hilda
version:             0.0.1
synopsis:            The hilda command line tool.
homepage:            https://github.com/jtpaasch/hilda
license:             MIT
license-file:        LICENSE
author:              JT Paasch
maintainer:          jt.paasch@gmail.com
extra-source-files:  CHANGELOG.md, README.md, Makefile, .gitignore

executable hilda
  main-is:             Main.hs
  build-depends:       base ^>=4.13.0.0, directory, filepath
  other-modules:       Conf.Constants, Conf.CLI, Conf.Dispatch, Conf.Paths,
                       Lib.Utils.Result, Lib.Utils.String,
                       Lib.CommandLine.Args, Lib.CommandLine.Cmd,
                       Lib.DB.CSV, Lib.IO.File,
                       App.IO.Artifact, App.IO.DB,
                       App.Data.Template,
                       App.Template.Types, App.Template.Parse.Lexer,
                       App.Template.Parse.Parser, App.Template.Parse.Lifter,
                       Handlers.Utils, Handlers.Template
  hs-source-dirs:      src
  default-language:    Haskell2010

